--- a/cfgs/fine-tuning/scan_pb.yaml
+++ b/cfgs/fine-tuning/scan_pb.yaml
@@ -1,32 +1,32 @@
-optimizer : {
+optimizer: {
   type: AdamW,
   kwargs: {
-  lr : 0.0005,
-  weight_decay : 0.05
+  lr: 0.0005,
+  weight_decay: 0.05
 }}
 
 scheduler: {
   type: CosLR,
   kwargs: {
     epochs: 300,
-    initial_epochs : 10
+    initial_epochs: 10
 }}
 
-dataset : {
-  train : { _base_: cfgs/dataset/Scan_PB.yaml,
+dataset: {
+  train: { _base_: cfgs/dataset/Scan_PB.yaml,
             others: {subset: 'train'}},
-  val : { _base_: cfgs/dataset/Scan_PB.yaml,
+  val: { _base_: cfgs/dataset/Scan_PB.yaml,
             others: {subset: 'test'}},
-  test : { _base_: cfgs/dataset/Scan_PB.yaml,
+  test: { _base_: cfgs/dataset/Scan_PB.yaml,
             others: {subset: 'test'}}}
-model : {
-  NAME: Point_M2AE_ScanObjectNN,
+model: {
+  NAME: I2P_MAE_ScanObjectNN,
   group_sizes: [32, 16, 16], 
   num_groups: [512, 256, 64],
   # hierarchical encoder
   encoder_depths: [5, 5, 5],
   encoder_dims: [96, 192, 384],
-  local_radius: [0.32, 0.64, 1.28],  
+  local_radius: [0.48, 0.96, 1.92],  
   # others
   drop_path_rate: 0.1,
   num_heads: 6,
@@ -34,7 +34,7 @@ model : {
 
 
 npoints: 2048
-total_bs : 32
-step_per_update : 1
-max_epoch : 300
-grad_norm_clip : 10
+total_bs: 32
+step_per_update: 1
+max_epoch: 300
+grad_norm_clip: 10
